# space-traders-sdk

./: .gitignore  Cargo.toml  README.md  a.json  useful.txt
mock_server/: Cargo.toml
mock_server/responses/: register_201.json  register_401.json
mock_server/responses/my/account/: 200.json
mock_server/responses/my/agent/: 200.json
mock_server/responses/my/contracts/: 200.json
mock_server/responses/my/factions/: 200.json
mock_server/responses/my/ships/: 200.json
mock_server/responses/my/ships/BADGER-1/: 200.json
mock_server/responses/my/ships/SNAKE-1/: 200.json
mock_server/responses/systems/: 200.json
mock_server/responses/systems/X1-AG18/: 200.json
mock_server/responses/systems/X1-AG18/X1-AG18-A2/: 200.json
mock_server/responses/systems/page=1&limit=2/: 200.json
mock_server/src/: lib.rs
src/: agent.rs  api.rs  contract.rs  faction.rs  factions.rs  lib.rs  ship.rs  test_utils.rs
src/account/: mod.rs
src/agent/: mod.rs
src/api/: login.rs  mod.rs
src/contract/: mod.rs
src/credential/: mod.rs
src/faction/: mod.rs
src/sdk/: agents.rs  login.rs  mod.rs
src/ship/: cargo.rs  cooldown.rs  crew.rs  engine.rs  frame.rs  fuel.rs  mod.rs  module.rs  mount.rs  nav.rs  reactor.rs  registration.rs  requirements.rs
src/space_traders_client/: mod.rs
src/system/: mod.rs
src/system/waypoint/: market.rs  mod.rs  shipyard.rs
src/utils/: mod.rs
tests/: agent_test.rs  agent_tests.rs  contract_tests.rs  faction_tests.rs  factions_tests.rs  integration_test.rs  login_test.rs  ship_tests.rs  utils.rs
tests/api/: login_test.rs
(+16 files in other folders)
