[package]
name = "space_traders_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.20", features = ["json"]}
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0"
tokio = {version = "1.32.0", features = ["full"]}

[dev-dependencies]
lazy_static = "1.4.0"
